@@ -1,6 +1,6 @@
 package org.brytelabs.orm.api;
 
-import java.util.Arrays;
+import java.util.List;
 import lombok.experimental.UtilityClass;
 import org.brytelabs.orm.core.builders.SelectBuilderImpl;
 import org.brytelabs.orm.core.operations.SelectOperation;
@@ -13,19 +13,19 @@ public class Select {
   }
 
   public static SelectBuilder from(Table table) {
-    return new SelectBuilderImpl(SelectOperation.ALL, table);
+    return SelectBuilderImpl.of(SelectOperation.ALL, table);
   }
 
   public static SelectBuilder from(String table, String... fields) {
-    return new SelectBuilderImpl(SelectOperation.FIELDS, Table.with(table), fields);
+    return SelectBuilderImpl.of(SelectOperation.FIELDS, Table.with(table), fields);
   }
 
   public static SelectBuilder from(Table table, String... fields) {
-    return new SelectBuilderImpl(SelectOperation.FIELDS, table, fields);
+    return SelectBuilderImpl.of(SelectOperation.FIELDS, table, fields);
   }
 
   public static SelectBuilder from(Table table, Field... fields) {
-    return new SelectBuilderImpl(SelectOperation.FIELDS, table, Arrays.asList(fields));
+    return SelectBuilderImpl.of(SelectOperation.FIELDS, table, List.of(fields));
   }
 
   public static SelectBuilder count(String table) {
@@ -33,7 +33,7 @@ public class Select {
   }
 
   public static SelectBuilder count(Table table) {
-    return new SelectBuilderImpl(SelectOperation.COUNT, table);
+    return SelectBuilderImpl.of(SelectOperation.COUNT, table);
   }
 
   public static SelectBuilder count(String table, String field) {
@@ -41,26 +41,26 @@ public class Select {
   }
 
   public static SelectBuilder count(Table table, String field) {
-    return new SelectBuilderImpl(SelectOperation.COUNT, table, field);
+    return SelectBuilderImpl.of(SelectOperation.COUNT, table, field);
   }
 
   public static SelectBuilder sum(Table table, String field) {
-    return new SelectBuilderImpl(SelectOperation.SUM, table, field);
+    return SelectBuilderImpl.of(SelectOperation.SUM, table, field);
   }
 
   public static SelectBuilder max(Table table, String field) {
-    return new SelectBuilderImpl(SelectOperation.MAX, table, field);
+    return SelectBuilderImpl.of(SelectOperation.MAX, table, field);
   }
 
   public static SelectBuilder min(Table table, String field) {
-    return new SelectBuilderImpl(SelectOperation.MIN, table, field);
+    return SelectBuilderImpl.of(SelectOperation.MIN, table, field);
   }
 
   public static SelectBuilder avg(Table table, String field) {
-    return new SelectBuilderImpl(SelectOperation.AVG, table, field);
+    return SelectBuilderImpl.of(SelectOperation.AVG, table, field);
   }
 
   //    public static SelectBuilder from(SelectBuilder select) {
-  //        return new SelectBuilderImpl(SelectOperation.AVG, table, field);
+  //        return SelectBuilderImpl.of(SelectOperation.AVG, table, field);
   //    }
 }
