@@ -1,8 +1,7 @@
 package org.brytelabs.orm.core.builders;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import java.util.stream.Stream;
 import org.brytelabs.orm.api.Field;
 import org.brytelabs.orm.api.JoinBuilder;
@@ -12,97 +11,93 @@ import org.brytelabs.orm.api.Query;
 import org.brytelabs.orm.api.SelectBuilder;
 import org.brytelabs.orm.api.Table;
 import org.brytelabs.orm.api.Terminable;
-import org.brytelabs.orm.api.WhereBuilder;
+import org.brytelabs.orm.api.WhereExpressionBuilder;
 import org.brytelabs.orm.core.operations.JoinOperation;
 import org.brytelabs.orm.core.operations.SelectOperation;
 
-public final class SelectBuilderImpl implements SelectBuilder {
-  private final SelectOperation selectOperation;
-  private final Table table;
-  private final List<Field> fields;
-  private final QueryImpl query;
+public record SelectBuilderImpl(
+    Query query,
+    SelectOperation selectOperation,
+    Table table,
+    List<Field> fields
+) implements SelectBuilder {
 
-  public SelectBuilderImpl(SelectOperation selectOperation, Table table) {
-    this(selectOperation, table, Collections.emptyList());
-  }
+    public SelectBuilderImpl {
+        Objects.requireNonNull(query, "Query cannot be null");
+    }
+    public static SelectBuilder of(SelectOperation selectOperation, Table table) {
+        return new SelectBuilderImpl(QueryImpl.empty(), selectOperation, table, List.of());
+    }
 
-  public SelectBuilderImpl(SelectOperation selectOperation, Table table, String... fields) {
-    this(selectOperation, table, Stream.of(fields).map(Field::with).collect(Collectors.toList()));
-  }
+    public static SelectBuilder of(SelectOperation selectOperation, Table table, String... fields) {
+        return new SelectBuilderImpl(QueryImpl.empty(), selectOperation, table, Stream.of(fields).map(Field::with).toList());
+    }
 
-  public SelectBuilderImpl(SelectOperation selectOperation, Table table, List<Field> fields) {
-    this.selectOperation = selectOperation;
-    this.table = table;
-    this.fields = fields;
-    this.query = new QueryImpl();
-    this.query.setSelectBuilder(this);
-  }
+    public static SelectBuilder of(SelectOperation selectOperation, Table table, Query query, String... fields) {
+        return new SelectBuilderImpl(query, selectOperation, table, Stream.of(fields).map(Field::with).toList());
+    }
 
-  @Override
-  public JoinBuilder leftJoin(Table table) {
-    return newJoinBuilder(table, JoinOperation.LEFT);
-  }
+    public static SelectBuilder of(SelectOperation selectOperation, Table table, List<Field> fields) {
+        return new SelectBuilderImpl(QueryImpl.empty(), selectOperation, table, fields);
+    }
 
-  @Override
-  public JoinBuilder rightJoin(Table table) {
-    return newJoinBuilder(table, JoinOperation.RIGHT);
-  }
+    @Override
+    public JoinBuilder leftJoin(Table table) {
+        return newJoinBuilder(table, JoinOperation.LEFT);
+    }
 
-  @Override
-  public JoinBuilder innerJoin(Table table) {
-    return newJoinBuilder(table, JoinOperation.INNER);
-  }
+    @Override
+    public JoinBuilder rightJoin(Table table) {
+        return newJoinBuilder(table, JoinOperation.RIGHT);
+    }
 
-  @Override
-  public JoinBuilder outerJoin(Table table) {
-    return newJoinBuilder(table, JoinOperation.OUTER);
-  }
+    @Override
+    public JoinBuilder innerJoin(Table table) {
+        return newJoinBuilder(table, JoinOperation.INNER);
+    }
 
-  @Override
-  public WhereBuilder where(String field) {
-    return new WhereBuilderImpl(field, query);
-  }
+    @Override
+    public JoinBuilder outerJoin(Table table) {
+        return newJoinBuilder(table, JoinOperation.OUTER);
+    }
 
-  @Override
-  public LimitBuilder limit(int limit) {
-    return new LimitBuilderImpl(limit, query);
-  }
+    @Override
+    public WhereExpressionBuilder where(String field) {
+        return WhereExpressionBuilderImpl.of(query, Field.with(field));
+    }
 
-  @Override
-  public OffsetBuilder offset(int offset) {
-    return new OffsetBuilderImpl(offset, query);
-  }
+    @Override
+    public LimitBuilder limit(int limit) {
+        return new LimitBuilderImpl(query, limit);
+    }
 
-  @Override
-  public SelectBuilder subQuery(Terminable terminable) {
-    query.setSubQuery(terminable.build());
-    return this;
-  }
+    @Override
+    public OffsetBuilder offset(int offset) {
+        return new OffsetBuilderImpl(query, offset);
+    }
 
-  @Override
-  public SelectBuilder subQuery(Query subQuery) {
-    query.setSubQuery(subQuery);
-    return this;
-  }
+    @Override
+    public SelectBuilder subQuery(Terminable terminable) {
+        Query qry = new QueryImpl(this, query.whereBuilder(), query.joinBuilder(), query.orderByBuilder(),
+                query.groupByBuilder(), query.onBuilder(), query.limitBuilder(), query.offsetBuilder(), terminable.build());
+        return new SelectBuilderImpl(qry, this.selectOperation, this.table, this.fields);
+    }
 
-  @Override
-  public QueryImpl build() {
-    return query;
-  }
+    @Override
+    public SelectBuilder subQuery(Query subQuery) {
+        Query qry = new QueryImpl(this, query.whereBuilder(), query.joinBuilder(), query.orderByBuilder(),
+                                   query.groupByBuilder(), query.onBuilder(), query.limitBuilder(), query.offsetBuilder(), subQuery);
+        return new SelectBuilderImpl(qry, this.selectOperation, this.table, this.fields);
+    }
 
-  public SelectOperation getSelectOperation() {
-    return selectOperation;
-  }
+    @Override
+    public Query build() {
+        return new QueryImpl(this, query.whereBuilder(), query.joinBuilder(),
+            query.orderByBuilder(), query.groupByBuilder(), query.onBuilder(),
+            query.limitBuilder(), query.offsetBuilder(), query.subQuery());
+    }
 
-  public Table getTable() {
-    return table;
-  }
-
-  public List<Field> getFields() {
-    return fields;
-  }
-
-  private JoinBuilder newJoinBuilder(Table joinedTable, JoinOperation operation) {
-    return new JoinBuilderImpl(joinedTable, operation, query);
-  }
+    private JoinBuilder newJoinBuilder(Table joinedTable, JoinOperation operation) {
+        return new JoinBuilderImpl(query, joinedTable, operation);
+    }
 }
